--- a/E2TM.ipynb
+++ b/E2TM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "intellectual-walker",
+   "id": "expected-guess",
    "metadata": {},
    "source": [
     "# Taller de Modelación\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wanted-arlington",
+   "id": "arctic-modeling",
    "metadata": {},
    "source": [
     "# Problema 3"
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-skill",
+   "id": "informational-honor",
    "metadata": {},
    "source": [
     "### a)\n",
     "\n",
-    "Primero calculamos las probabilidades de transición. Tenemos los siguientes estados.\n",
+    "Para calcular las matrices de transición primero enumeramos los estados.\n",
     "\n",
     "1: AA x AA\n",
     "\n",
@@ -120,7 +120,7 @@
     "    0 & i\\in [5]\n",
     "\\end{cases}$\n",
     "\n",
-    "Por lo tanto, obtenemos la siguiente matriz de transición.\n",
+    "Por lo tanto, obtenemos la siguiente matriz estocástica.\n",
     "\n",
     "$P = \n",
     "\\begin{bmatrix}\n",
