--- a/E2TM.ipynb
+++ b/E2TM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "brilliant-exercise",
+   "id": "intermediate-tissue",
    "metadata": {},
    "source": [
     "# Taller de Modelación\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "north-terry",
+   "id": "amber-paste",
    "metadata": {},
    "source": [
     "# Problema 3"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "round-kelly",
+   "id": "collaborative-trick",
    "metadata": {},
    "source": [
     "### a)\n",
@@ -126,6 +126,131 @@
     "    0 & 0 & 1/16 & 1/4 & 0 & 1\n",
     "\\end{bmatrix}$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dramatic-isolation",
+   "metadata": {},
+   "source": [
+    "aquí va la gráfica del proceso"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "discrete-research",
+   "metadata": {},
+   "source": [
+    "### b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "concerned-warning",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "M = np.array([\n",
+    "    [1,1/4,1/16,0,0,0],\n",
+    "    [0,1/2,1/4,0,0,0],\n",
+    "    [0,1/4,1/4,1/4,1,0],\n",
+    "    [0,0,1/4,1/2,0,0],\n",
+    "    [0,0,1/8,0,0,0],\n",
+    "    [0,0,1/16,1/4,0,1]\n",
+    "])\n",
+    "\n",
+    "evalM = np.linalg.eig(M)[0]\n",
+    "evecM = np.linalg.eig(M)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "convertible-chapter",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.          1.          0.80901699 -0.30901699  0.25        0.5       ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(evalM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "sorted-subdivision",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evecM1 = evecM[:,0]\n",
+    "evecM2 = evecM[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "minor-strength",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 0. 0. 0. 0. 0.] [0. 0. 0. 0. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(evecM1,evecM2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "altered-lesbian",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "assisted-arabic",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "statutory-signature",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pleasant-english",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "institutional-silicon",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
