--- a/E2TM.ipynb
+++ b/E2TM.ipynb
@@ -226,7 +226,9 @@
    "id": "assisted-arabic",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Prueba"
+   ]
   },
   {
    "cell_type": "code",
@@ -255,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
