--- a/E2TM.ipynb
+++ b/E2TM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "orange-removal",
+   "id": "signed-family",
    "metadata": {},
    "source": [
     "# Taller de Modelación\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automated-numbers",
+   "id": "banned-syria",
    "metadata": {},
    "source": [
     "# Problema 3"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decreased-stockholm",
+   "id": "fifteen-advocacy",
    "metadata": {},
    "source": [
     "### a)\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "right-grain",
+   "id": "broke-smile",
    "metadata": {},
    "source": [
     "aquí va la gráfica del proceso"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-equipment",
+   "id": "gothic-infection",
    "metadata": {},
    "source": [
     "### b)"
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innovative-tribute",
+   "id": "eligible-remains",
    "metadata": {},
    "source": [
     "Ahora calcularemos los eigenvalores y eigenvectores de la matriz."
@@ -154,12 +154,8 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "reported-munich",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "chubby-orange",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -179,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clean-ridge",
+   "id": "preliminary-resort",
    "metadata": {},
    "source": [
     "Los eigenvalores son los siguientes."
@@ -188,12 +184,8 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "described-coordinator",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "infrared-fighter",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -209,21 +201,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-christmas",
+   "id": "correct-salem",
    "metadata": {},
    "source": [
-    "Sólo nos interesan los eigenvectores con eigenvalor 1. Tenemos dos de ellos que son linealmente independientes, son los siguients."
+    "Sólo nos interesan los eigenvectores con eigenvalor 1. Tenemos dos de ellos que son linealmente independientes, son los siguientes."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "forward-issue",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "greatest-friendship",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -244,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quality-distinction",
+   "id": "material-smile",
    "metadata": {},
    "source": [
     "Como las entradas de los eigenvectores suman 1 sabemos que forman una distribución de probabilidad. Como estas distribuciones son eigenvectores con valor 1 sabemos que son las distribuciones de equilibrio de la matriz $M$.\n",
@@ -255,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satisfied-ticket",
+   "id": "civic-genome",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -263,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprising-privilege",
+   "id": "hazardous-ordinary",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foreign-karen",
+   "id": "varied-detail",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -279,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "living-looking",
+   "id": "deluxe-bryan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subjective-herald",
+   "id": "described-sunglasses",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -297,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coordinated-review",
+   "id": "magnetic-zambia",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -305,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "automated-gilbert",
+   "id": "fossil-module",
    "metadata": {},
    "outputs": [],
    "source": []
