--- a/E2TM.ipynb
+++ b/E2TM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "signed-family",
+   "id": "arabic-mainland",
    "metadata": {},
    "source": [
     "# Taller de Modelación\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "banned-syria",
+   "id": "given-liverpool",
    "metadata": {},
    "source": [
     "# Problema 3"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifteen-advocacy",
+   "id": "answering-remains",
    "metadata": {},
    "source": [
     "### a)\n",
     "\n",
-    "Primero calculamos las probabilidades de transición. Tenemos los siguientes estados.\n",
+    "Para calcular la matriz de transición enumeramos los estados.\n",
     "\n",
     "1: AA x AA\n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "6: $p(aa) = 1$\n",
     "\n",
-    "Ahora asumimos que la población de machos tiene la misma distribución de genotipos que la población de hembras. Eligiengo un cachorro hembra y uno macho, tenemos entonces las siguientes probabilidades de transición.\n",
+    "Ahora asumimos que la población de machos tiene la misma distribución de genotipos que la población de hembras. Eligiengo un cachorro hembra y uno macho tenemos las siguientes probabilidades de transición.\n",
     "\n",
     "$p_{i,1} = \n",
     "\\begin{cases} \n",
@@ -129,15 +129,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broke-smile",
+   "id": "operational-level",
    "metadata": {},
    "source": [
-    "aquí va la gráfica del proceso"
+    "Tenemos también la siguiente gráfica.\n",
+    "\n",
+    "<img src = \"gr.jpeg\" alt = \"Gráfica\" style = \"width: 700px;\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "gothic-infection",
+   "id": "super-bread",
    "metadata": {},
    "source": [
     "### b)"
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eligible-remains",
+   "id": "level-tulsa",
    "metadata": {},
    "source": [
     "Ahora calcularemos los eigenvalores y eigenvectores de la matriz."
@@ -153,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "chubby-orange",
+   "execution_count": 1,
+   "id": "velvet-treaty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "preliminary-resort",
+   "id": "pediatric-feelings",
    "metadata": {},
    "source": [
     "Los eigenvalores son los siguientes."
@@ -183,8 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "infrared-fighter",
+   "execution_count": 2,
+   "id": "atmospheric-reconstruction",
    "metadata": {},
    "outputs": [
     {
@@ -201,16 +203,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "correct-salem",
+   "id": "accomplished-helena",
    "metadata": {},
    "source": [
-    "Sólo nos interesan los eigenvectores con eigenvalor 1. Tenemos dos de ellos que son linealmente independientes, son los siguientes."
+    "Sólo nos interesan los eigenvectores con eigenvalor 1, pues con ellos obtendremos las distribuciones de equilibrio. Tenemos dos de ellos que son linealmente independientes, son los siguientes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "greatest-friendship",
+   "execution_count": 3,
+   "id": "related-arthritis",
    "metadata": {},
    "outputs": [
     {
@@ -232,18 +234,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "material-smile",
+   "id": "ideal-thong",
    "metadata": {},
    "source": [
-    "Como las entradas de los eigenvectores suman 1 sabemos que forman una distribución de probabilidad. Como estas distribuciones son eigenvectores con valor 1 sabemos que son las distribuciones de equilibrio de la matriz $M$.\n",
+    "Como las entradas de los eigenvectores suman 1 sabemos que forman una distribución de probabilidad. Como estas distribuciones son eigenvectores con eigenvalor 1 sabemos que son las distribuciones de equilibrio de la matriz $M$.\n",
     "\n",
-    "Esto es de esperarse ya que --"
+    "Esto es de esperarse ya que en la gráfica de la cadena podemos observar que si estamos en el estado AA x AA entonces no podemos pasar a ningún otro estado, y ocurre lo mismo con el estado aa x aa. Es por esto que las distribuciones de equilibrio son $(1,0,0,0,0,0)$, correspondiente al estado AA x AA que es el estado 1, y $(0,0,0,0,0,1)$, correspondiente al estado aa x aa que es el estado 6."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civic-genome",
+   "id": "simple-lounge",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -251,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hazardous-ordinary",
+   "id": "respected-stretch",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -259,41 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varied-detail",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "deluxe-bryan",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Prueba"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "described-sunglasses",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "magnetic-zambia",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fossil-module",
+   "id": "thousand-screw",
    "metadata": {},
    "outputs": [],
    "source": []
